// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note should render correctly 1`] = `
"<div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>note<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #eaeaea;
          color: #000;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div>"
`;

exports[`Note should work with different styles 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          padding: calc(8px / 2) calc(16px / 2);
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #7cd77b;
          color: white;
          background-color: #7cd77b;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #000;
          color: #fff;
          background-color: #000;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>error<style>
        .note {
          padding: calc(8px / 2) calc(16px / 2);
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #000;
          color: #fff;
          background-color: #000;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div></div>"
`;

exports[`Note should work with different types 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #7cd77b;
          color: #7cd77b;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #ffc438;
          color: #ffc438;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>error<style>
        .note {
          padding: 8px 16px;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #e15c56;
          color: #e15c56;
          background-color: #fff;
          border-radius: 4px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4px;
        }
      </style></div></div>"
`;
